# mlprojects

./: LICENSE  README.md  pyproject.toml
mlprojects/best_crop_selection/: README.md  best_crop_selection.ipynb
mlprojects/clustering_antarctic_penguins/: README.md  clustering_antarctic_penguins.ipynb
mlprojects/credit_cards_approvals/: README.md  credit_cards_approvals.ipynb
mlprojects/movie_rental_duration/: README.md  movie_rental_duration.ipynb
mlprojects/movie_similarity_from_plot/: README.md  movie_similarity_from_plot.ipynb
mlprojects/tic_tac_toe_bot/: tic_tac_toe_bot.ipynb  tic_tac_toe_results.csv
